<resources>
    <string name="app_name">QuikTrak</string>

    <!--Activity Names-->
    <string name="transactions_page">Transactions</string>
    <string name="categories_page">Categories</string>
    <string name="home_page">Home</string>

    <!--Spending-->
    <string name="next_month_button">Next</string>
    <string name="month_text_view">Month</string>
    <string name="previous_month_button">Previous</string>
    <string name="no_transactions_for_month_message">You don\'t have any transactions for this month, add some by pressing the + icon!</string>
    <string name="total_text_view">$$$$</string>
    <string name="quick_op_text_view">Quik Add Options</string>
    <string name="quick_op_category_button_1">Category 1</string>
    <string name="quick_op_category_button_2">Category 2</string>
    <string name="quick_op_category_button_3">Category 3</string>
    <string name="quick_op_category_button_4">Category 4</string>
    <string name="day_of_month_text_view">Day of Month</string>

    <!--Transactions-->
    <string name="category_filter_spinner">Category Filter Spinner</string>

    <!--Add New Transaction-->
    <string name="title_activity_add_transaction">Add Transaction</string>
    <string name="title_activity_update_transaction">Update Transaction</string>
    <string name="date_text_view">Date</string>
    <string name="amount_text_view">Amount</string>
    <string name="category_text_view">Category</string>
    <string name="note_text_view">Note</string>
    <string name="add_transaction_button">Add Transaction</string>
    <string name="update_transaction_button">Update Transaction</string>
    <string name="delete_transaction_button">Delete Transaction</string>
    <string name="add_transaction_check_mark">Add Transaction</string>

    <!--Categories-->
    <string name="add_category_button">Add Category</string>
    <string name="add_category_text_view">New category name...</string>
    <string name="no_categories_message">You don\'t have any categories, add some above!</string>

    <!--Home-->
    <string name="title_activity_home">Home</string>
</resources>
