<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transactions.TransactionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/transactionsEarlierMonthButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/previous_month_button"
                android:src="@drawable/ic_keyboard_arrow_left_white_24dp" />

            <TextView
                android:id="@+id/transactionsMonthTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/month_text_view"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/transactionsLaterMonthButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/next_month_button"
                android:src="@drawable/ic_keyboard_arrow_right_white_24dp" />
        </LinearLayout>

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/recycler_view_heading_padding"
            android:paddingBottom="@dimen/recycler_view_heading_padding">

            <TextView
                android:id="@+id/transactionsDateHeadingTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_text_view"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/transactionsAmountHeadingTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount_text_view"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/transactionsCategoryHeadingTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/category_text_view"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/transactionsNoteHeadingTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/note_text_view"
                android:gravity="center"
                android:textStyle="bold" />
        </LinearLayout>

        <View style="@style/Divider"/>

        <com.threehundredpercentbears.quiktrak.utils.EmptyMessageRecyclerView
            android:id="@+id/transactionsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/transactions_row_item" />

        <TextView
            android:id="@+id/transactionsEmptyRecyclerViewTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/no_transactions_for_month_message"
            android:layout_weight="1"
            android:textSize="24sp" />

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight=".2">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:paddingStart="8dp"
                android:paddingEnd="2dp"
                android:src="@drawable/ic_calendar_gray_32dp" />

            <TextView
                android:id="@+id/transactionsDayOfMonthTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/day_of_month_text_view"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>