<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TableLayout
        android:id="@+id/transactionTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:background="#dcdcdc"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/date_text_view"
                android:textColor="#000000" />

            <TextView
                android:layout_weight="1"
                android:background="#d3d3d3"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/amount_text_view"
                android:textColor="#000000" />

            <TextView
                android:layout_weight="1"
                android:background="#cac9c9"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/category_text_view"
                android:textColor="#000000" />

            <TextView
                android:layout_weight="1"
                android:background="#cac9c9"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/note_text_view"
                android:textColor="#000000" />

        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>